--- a/JoinForm.html
+++ b/JoinForm.html
@@ -35,8 +35,8 @@
   <link rel="stylesheet" href="assets/css/style.css" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <link rel="icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 
 </head><body>
 <style>
@@ -48,7 +48,7 @@ body {
   <div class="container">
     <div class="row">
       <div class="contact-holder col-lg-8 offset-lg-2 col-sm-8 offset-sm-2">
-        <h1 class="wow fadeInUp" data-wow-duration="1.5s">Join Our Organisation</h1>
+        <h1 class="wow fadeInUp" data-wow-duration="1.5s">Join Our Organisation!!</h1>
         <form method="POST" action="https://formspree.io/xzbjpbne" data-toggle="validator">
           <div class="form-container row wow fadeInUp" data-wow-duration="1.5s">
             <div class="form-group col-lg-6">
