--- a/JoinForm.html
+++ b/JoinForm.html
@@ -52,11 +52,11 @@ body {
         <form method="POST" action="https://formspree.io/xzbjpbne" data-toggle="validator">
           <div class="form-container row wow fadeInUp" data-wow-duration="1.5s">
             <div class="form-group col-lg-6">
-              <input class="form-control" type="text" name="username" id="username" placeholder="Name" required>
+              <input class="form-control" type="text" name="username" id="username" placeholder="GitHub UserName" required>
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-6" align="center">
-              <input class="form-control" type="email" id="email" name="email" placeholder="Email" required>
+              <input class="form-control" type="text" id="email" name="email" placeholder="GitHub ID" required>
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-12">
@@ -72,7 +72,10 @@ body {
     </div>
 
   </div>
-
+<div class="credit">
+          <i class="fa fa-copyright"></i>
+			<a href="https://github.com/Srishti-Rani" target="_blank">Srishti-Rani</a>
+        </div>
 
 <!-- JS Plugins -->
 
